Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-13239

Parameters are ignored if OPTION_LIST contains space(s), MYSQL type table(CONNECT engine)

    XMLWordPrintable

Details

    Description

      When OPTION_LIST contains spaces, then results are incorrect. Supposedly it use parameters, that were used on connecting to the current client.

      In the test case below table c1 have to connect on port 3322, but instead it uses current port 3311. (in my case table c1 connects to the same server and reads information about itself )

      select @@port;
      +--------+
      | @@port |
      +--------+
      |   3311 |
      +--------+
       
      CREATE TABLE c1 ENGINE=CONNECT TABLE_TYPE=MYSQL 
      DBNAME=information_schema OPTION_LIST='host=127.0.0.1, port=3322,user=root', tabname=tables;
      Query OK, 0 rows affected (0.06 sec)
       
      SELECT * FROM c1 WHERE TABLE_NAME='c1'\G
       
      1 row in set (0.00 sec)
      *************************** 1. row ***************************
        TABLE_CATALOG: def
         TABLE_SCHEMA: test
           TABLE_NAME: c1
           TABLE_TYPE: BASE TABLE
               ENGINE: CONNECT
              VERSION: 10
           ROW_FORMAT: Dynamic
           TABLE_ROWS: 10
       AVG_ROW_LENGTH: 0
          DATA_LENGTH: 0
      MAX_DATA_LENGTH: 0
         INDEX_LENGTH: 0
            DATA_FREE: 0
       AUTO_INCREMENT: NULL
          CREATE_TIME: NULL
          UPDATE_TIME: NULL
           CHECK_TIME: NULL
      TABLE_COLLATION: latin1_swedish_ci
             CHECKSUM: NULL
       CREATE_OPTIONS: `TABLE_TYPE`='MYSQL' `TABNAME`='tables' `DBNAME`='information_schema' `OPTION_LIST`='host=127.0.0.1, port=3322,user=root'
        TABLE_COMMENT: 
      1 row in set (0.00 sec)
      

      Attachments

        Activity

          People

            bertrandop Olivier Bertrand
            alice Alice Sherepa
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.