- Fix MDEV-13239 Suppress the restriction about no blanks around , and = in the OPTION_LIST.   modified:   storage/connect/ha_connect.cc